Cambio de logo luvstar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Logo -->
             <div class="flex-shrink-0">
                 <a href="#">
-                    <img src="/assets/luvstarLogo.svg" alt="logo-luvstar" class="block w-40 h-auto">
+                    <img src="/assets/luvstar-logo.svg" alt="logo-luvstar" class="block w-40 h-auto">
                 </a>
             </div>
 
@@ -52,7 +52,7 @@
         <div class="lg:hidden flex items-center justify-between px-10 py-4">
             <!-- Logo -->
             <a href="#">
-                <img src="/assets/luvstarLogo.svg" alt="logo-luvstar" class="w-40 h-auto">
+                <img src="/assets/luvstar-logo.svg" alt="logo-luvstar" class="w-40 h-auto">
             </a>
 
             <!-- Botón Hamburguesa -->
@@ -74,11 +74,11 @@
                     <!-- Logo -->
                     <li class="my-6">
                         <a href="#">
-                            <img src="/assets/luvstarLogo.svg" alt="logo-luvstar" class="w-50 h-auto border-b-1">
+                            <img src="/assets/luvstar-logo.svg" alt="logo-luvstar" class="w-50 h-auto border-b-1">
                         </a>
                     </li>
 
-                    <li><a href="#" class="block text-xl text-black font-extrabold hover:text-gray-900 special-gothic-expanded-one-regular ">Camisetas</a></li>
+                    <li><a href="" class="block text-xl text-black font-extrabold hover:text-gray-900 special-gothic-expanded-one-regular ">Camisetas</a></li>
                     <li><a href="#" class="block text-xl text-black font-extrabold hover:text-gray-900 special-gothic-expanded-one-regular b">Pantalones</a></li>
                     <li><a href="#" class="block text-xl text-black font-extrabold hover:text-gray-900 special-gothic-expanded-one-regular">Hoodies</a></li>
                     <li><a href="#" class="block text-xl text-black font-extrabold hover:text-gray-900 special-gothic-expanded-one-regular">Camisas</a></li>
@@ -99,14 +99,14 @@
 
                 <!-- Imagen superpuesta -->
                 <div class="absolute inset-0 flex items-center justify-center z-10">
-                    <img src="/assets/image-_1_.svg" alt="Logo" class="w-48 opacity-90">
+                    <img src="/assets/luvstar-logo.svg" alt="Logo" class="w-48 opacity-90 filter whitescale">
                 </div>
             </section>
 
             <!--Seccion Camisetas-->
             <h1 class="xl:mx-14 mx-6 mt-20">
                 <span class="text-3xl block special-gothic-expanded-one-600 ">Camisetas</span>
-                <a href="#" class="text-md font-semibold  border-black inline-block hover:border-b-1">Ver más</a>
+                <a href="/camisetas.html" class="text-md font-semibold  border-black inline-block hover:border-b-1">Ver más</a>
             </h1>
             <section class = "
                 flex overflow-x-auto scroll-smooth snap-x snap-mandatory gap-6 xl:mx-12 xl:my-0 mx-4 py-2
@@ -121,7 +121,7 @@
                             <div class = "flex justify-between items-center">
                                 <span class = "bg-gray-100 text-gray-600 text-sm px-3 py-1 rounded-full">Mas Vendida</span>
                                 <button class = "">
-                                    ♥️
+                                    ⭐
                                 </button>
                             </div>
                             <!--Imagen-->
